azmon-basic-tmpl/1.2.1/readme.md
# azmon-basic-tmpl

The purpose of this template is to deploy a basic setup of Azure Monitor. It contains the following resources:

- Log Analytics workspace
- Automation Account
- Storage Account

For the storage account and automation account there's no initial configuration but the log analytics workspace has initial configurations set in the template for the following:

- Datasources
- Saved searches
- Solutions
- Linked services

_Datasources (perf):_
| #   | Name                              | Category          | Counter                   | Instance | Interval |
| --- | :-------------------------------- | :---------------- | :------------------------ | :------- | :------- |
| 1   | PerfMemoryAvailMB                 | Memory            | Available Mbytes          | *        | 60       |
| 2   | PerfMemoryPagesSec                | Memory            | Pages/sec                 | *        | 60       |
| 3   | PerfMemoryCommittedBytesInUse     | Memory            | % Committed Bytes In Use  | *        | 60       |
| 4   | PerfLogicalDiskFreeSpace          | LogicalDisk       | % Free Space              | *        | 60       |
| 5   | PerfLogicalDiskAvgDiskRead        | LogicalDisk       | Avg. Disk sec/Read        | *        | 60       |
| 6   | PerfLogicalDiskAvgDisTransfer     | LogicalDisk       | Avg. Disk sec/Transfer    | *        | 60       |
| 7   | PerfLogicalDiskAvgDiskWrite       | LogicalDisk       | Avg. Disk sec/Write       | *        | 60       |
| 8   | PerfLogicalDiskCurDiskQueueLength | LogicalDisk       | Current Disk Queue Length | *        | 60       |
| 9   | PerfLogicalDiskFreeMB             | LogicalDisk       | Free MegaBytes            | *        | 60       |
| 10  | PerfLogicalDiskDiskReads          | LogicalDisk       | Disk Reads/sec            | *        | 60       |
| 11  | PerfLogicalDiskDiskWrites         | LogicalDisk       | Disk Writes/sec           | *        | 60       |
| 12  | PerfLogicalDiskDiskTransfers      | LogicalDisk       | Disk Transfers/sec        | *        | 60       |
| 13  | PerfSystemProcessor               | System            |                           | *        | 60       |
| 14  | PerfProcessorTotal                | Processor         | % Processor Time          | _Total   | 60       |
| 15  | PerfNetworkBytesTotal             | Network Interface | Bytes Total/sec           | *        | 60       |
| 16  | PerfNetworkBytesSent              | Network Adapter   | Bytes Send/sec            | *        | 60       |
| 17  | PerfNetworkBytesReceived          | Network Adapter   | Bytes Received/sec        | *        | 60       |
| 18  | PerfProcessProcessorTime          | Process           | % Processor Time          | *        | 60       |
| 19  | PerfProcessPrivateBytes           | Process           | Private Bytes             | *        | 60       |


_Datasources (event):_
| #   | Name                | Eventlog    | Error | Warning | Info |
| --- | :------------------ | :---------- | :---- | :------ | :--- |
| 1   | EventApplicationLog | Application | X     | X       |      |
| 2   | EventSystemLog      | System      | X     | X       |      |

_Solutions_
| #   | Name                             | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| --- | :------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| 1   | OMSGallery/ADAssessment          | Operations Management Suite Active Directory Health Check Solution assesses the risk and health of your Active Directory environments on a regular interval. It provides a prioritized list of recommendations tailored to your deployments. These recommendations are categorized across six focus areas which allows you and your team to quickly understand the risk and health of your environments and easily take action to decrease risk and improve health.                                                                                                                                                                                                            |
| 2   | OMSGallery/AgentHealthAssessment | The Azure Log Analytics Agent Health solution gives customers insight into the health, performance and availability of their Windows and Linux agents.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| 3   | OMSGallery/AlertManagement       | The Alert Management Solution helps you view your Operations Manager and Log Analytics Log alerts across your entire environment. This tool can help you to easily triage alerts and identify root causes in your environment.                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| 4   | OMSGallery/AntiMalware           | Operations Management Suite Antimalware Assessment Solution helps you identify servers that are infected or at increased risk of infection by malware.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
| 5   | OMSGallery/AzureActivity         | he Azure Activity Log Analytics Solution gives you insights into activities happening in your Azure environment across multiple Azure subscriptions. In a single view, see aggregated statistics of all activities and then drill-down for more details.                                                                                                                                                                                                                                                                                                                                                                                                                       |
| 6   | OMSGallery/DnsAnalytics          | The DNS Analytics solution provides security, performance and operations related insights into the DNS infrastructure of your organization by collecting, analyzing and correlating analytic and audit logs and other related data from the DNS servers.                                                                                                                                                                                                                                                                                                                                                                                                                       |
| 7   | OMSGallery/AzureAutomation       | Automation & Control in Operations Management Suite (OMS) delivers unified capabilities to deploy, configure, and maintain your infrastructure and applications in Azure or any other cloud, including on-premises, across Windows Server and Linux.                                                                                                                                                                                                                                                                                                                                                                                                                           |
| 8   | OMSGallery/AzureNSGAnalytics     | The Azure Network Security Group Analytics Solution helps you easier troubleshoot issues across your Azure networks by providing visibility into the network security group rules and logs.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| 9   | OMSGallery/ChangeTracking        | Change Tracking helps you easily identify software, file, daemon, and Windows Services changes that occur in your environment. Identifying these configuration changes can help you pinpoint operational issues.                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| 10  | OMSGallery/LogicAppsManagement   | The Logic Apps Management Solution allows to monitor and manage your Logic Apps. This solution provides you a summary of overall health of your Logic Apps, with options to drill into details and to troubleshoot unexpected behavior patterns.                                                                                                                                                                                                                                                                                                                                                                                                                               |
| 11  | OMSGallery/NetworkMonitoring     | Network Performance Monitor (NPM) is a cloud-based hybrid network monitoring solution that helps you monitor network performance between various points in your network infrastructure, monitor network connectivity to applications and monitor the performance of your Azure ExpressRoute.                                                                                                                                                                                                                                                                                                                                                                                   |
| 12  | OMSGallery/Office365             | Office 365 solution provides a summary view of all ongoing user activities.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
| 13  | OMSGallery/Security              | Operations Management Suite Security and Audit Solution helps you continuously monitor the security of your environments for potential vulnerabilities and threats, and it provides access to the data and intelligence you need to respond quickly. It works with Windows and Linux systems that are running on-premises, in Azure and AWS.                                                                                                                                                                                                                                                                                                                                   |
| 14  | OMSGallery/ServiceDesk           | The IT Service Management Connector Solution enables you to provide faster resolution of incidents by bringing service desk and monitoring data together. It provides a bi-directional connection between Azure and supported ITSM tools : ServiceNow, System Center Service Manager, Provance and Cherwell.                                                                                                                                                                                                                                                                                                                                                                   |
| 15  | OMSGallery/ServiceMap            | Service Map presents a view of your servers as you think of them - as interconnected systems that deliver services and rely on other technologies. Service Map discovers and maps server and process dependencies in real-time, without any predefinition, and visualizes application components, service dependencies, and supporting infrastructure configuration. This helps you eliminate the guesswork of problem isolation, identify surprise connections and broken links in your environment, and perform Azure migrations knowing that critical systems and endpoints won't be left behind. Service Map supports Windows and Linux guests, for any cloud and on-prem. |
| 16  | OMSGallery/SQLAssessment         | Operations Management Suite SQL Health Check Solution assesses the risk and health of your SQL Server environments on a regular interval. It provides a prioritized list of recommendations tailored to your deployments. These recommendations are categorized across six focus areas which allows you and your team to quickly understand the risk and health of your environments and easily take action to decrease risk and improve health.                                                                                                                                                                                                                               |
| 17  | OMSGallery/Updates               | Update management identifies missing system updates and orchestrates installation of these updates across Windows and Linux servers both in your data center and in any public cloud.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
| 18  | OMSGallery/WireData2             | Wire Data 2.0 provides a replacement to the existing Wire Data solution, bringing support for Windows server starting with 2008 R2 version and Linux operating systems. Wire Data 2.0 helps you perform an analysis of your network traffic without requiring configuration of flow forwarding or taps on your network devices. With Wire Data 2.0, you get the same visibility to active inbound and outbound connections, and the ability to filter by bytes sent over the wire, application level protocols, and subnet.Combined with other log data, Wire Data 2.0 provides rich context for your log search and analytics.                                                |
| 19  | OMSGallery/Containers            | The container solution helps you see container usage and diagnose failures across your public and private cloud environments.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|     |                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |


To be able to re-use the template for different customers/projects the following parameters are use:

- **Project:** An inidicator string for the customer or project that this will be used for. What you enter here will be used in tags but also in the names for the different resources that are created.
- **VMRGName:** The resource group name that is used in the saved queries. This doesn't have to be an existing resource group as long as you don't use the saved queries.
- **Environment:** Can be one of the following: dev-test-acc-prod.
- **UniqueNumber:** Unique number to add to the name of the accounts.
- **Location:** The region in which the deployment will take place.
- **CreatedOn:** This paramters is in fact a variable that holds the current date and time to be added as a tag to the resources created by this template. Because of technical reasons this has to be a parameter and not a variable. The default value for the parameter is the outcome of the function [utcNow()]
- **EndsOn:** This parameter provides an indication of when the created resource should be end-of-life. It helps when cleaning up your Azure resources to have an idea when a resource isn't used anymore. The format of the date provided is yyyymmdd. When there's no end date available you should use 99999999.
- **CreatedBy:** A free text field to provide information about the person or team that created the resource. Isn't to be confused with the OwnedBy field.
- **OwnedBy:** A free text field to provide information about the person or team that owns the resource. Isn't to be confused with the CreatedBy field.

<a href="https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fmydur%2FARMtemplates%2Fmaster%2Fazmon-basic-tmpl%2F%5Fworking%2Ftemplate.json" target="_blank">
<img src="http://azuredeploy.net/deploybutton.png"/>
</a><br />
